--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,29 @@
 .App {
   text-align: center;
+  background-color: black;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.filtrage {
+  width: 50%;
   display: flex;
-  flex-direction: column;
-  align-items: center;
+}
+.movieList {
+  display: flex;
+  flex-wrap: wrap;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  column-gap: 5%;
+}
+.fa-star{
+  color:gold;
 }
 
-.App-link {
-  color: #61dafb;
+.disp{
+  display: flex;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.displ{
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  column-gap:5%;
 }
